...
  var body: some View {
    VStack(spacing: 10) {
      Image(systemName: "globe")
        .imageScale(.large)
        .foregroundStyle(.tint)
      Button("Prove Circom", action: runCircomProveAction).disabled(!isCircomProveButtonEnabled)
        .accessibilityIdentifier("proveCircom")
      Button("Verify Circom", action: runCircomVerifyAction).disabled(!isCircomVerifyButtonEnabled)
        .accessibilityIdentifier("verifyCircom")
      Button("Prove Circom (Rapidsnark)", action: runRapidsnarkProveAction).disabled(
        !isRapidsnarkProveButtonEnabled
      ).accessibilityIdentifier("proveRapidsnark")
      Button("Verify Circom (Rapidsnark)", action: runRapidsnarkVerifyAction).disabled(
        !isRapidsnarkVerifyButtonEnabled
      ).accessibilityIdentifier("verifyRapidsnark")
      Button("Prove Gnark", action: runGnarkProveAction).disabled(!isGnarkProveButtonEnabled)
        .accessibilityIdentifier("proveGnark")
      Button("Verify Gnark", action: runGnarkVerifyAction).disabled(!isGnarkVerifyButtonEnabled)
        .accessibilityIdentifier("verifyGnark")
      Button("Prove Halo2", action: runHalo2ProveAction).disabled(!isHalo2ProveButtonEnabled)
        .accessibilityIdentifier("proveHalo2")
      Button("Verify Halo2", action: runHalo2VerifyAction).disabled(!isHalo2VerifyButtonEnabled)
        .accessibilityIdentifier("verifyHalo2")
      Button("Prove Noir", action: runNoirProveAction).disabled(!isNoirProveButtonEnabled)
        .accessibilityIdentifier("proveNoir")
      Button("Verify Noir", action: runNoirVerifyAction).disabled(!isNoirVerifyButtonEnabled)
        .accessibilityIdentifier("verifyNoir")

      ScrollView {
        Text(textViewText)
          .padding()
          .accessibilityIdentifier("proof_log")
      }
...
